# attv

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
attv/: __init__.py  __main__.py
backend/: config.py  database.py  main.py  runner.py  worker.py
backend/models/: job.py
backend/pipeline/: extract.py  publish.py  render.py  script.py  summarize.py  tts.py
docs/: index.html  privacy.html  privacy.md  terms.html  terms.md  tiktokbb5gEmlqqdhjDsn8XOmKuFelRhmmPak0.txt
examples/: urls.csv
ui/: app.py
