[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attv"
version = "0.1.0"
description = "Auto tool tạo video ngắn từ trang web và đăng TikTok"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
attv = "attv.__main__:main"

[tool.setuptools.packages.find]
include = ["attv*", "backend*"]
